--- a/src/js/views/statics/news.html
+++ b/src/js/views/statics/news.html
@@ -9,5 +9,5 @@
     <h3>{{newstory.title}}</h3>
     <h4>{{newstory.name}}</h4>
     <p>{{newstory.description}}</p>
-    <a href="{{newstory.url}}">read more</a>
+    <a href="{{newstory.url}}" target="_blank">read more</a>
    </div>
