--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,9 +10,15 @@
   0% {
     transform: scale(1);
   }
+  // 25% {
+  //   transform: scale(1.1);
+  // }
   50% {
     transform: scale(1.2);
   }
+  // 75% {
+  //   transform: scale(1.1);
+  // }
   100% {
     transition: scale(1);
   }
@@ -93,6 +99,18 @@ nav {
 
 i {
   font-size: 60px;
+}
+
+img {
+  &.avatar {
+    border-radius: 50%;
+    border: 2px solid $default;
+  }
+}
+
+footer {
+  background-color: $primary;
+  color: $default;
 }
 
 .devbookIntro {
@@ -204,4 +222,28 @@ ul {
       }
     }
   }
+}
+
+table {
+  tr {
+    &:nth-child(1) {
+      height: 75px;
+      font-size: 20px;
+      font-weight: bold;
+    }
+    &:nth-child(2) {
+      height: 60px;
+      font-size: 16px;
+    }
+    &:nth-child(3) {
+      height: 350px;
+      font-size: 14px;
+      text-align: justify;
+    }
+  }
+}
+
+.eventBox {
+  border: 1px solid $default;
+  border-radius: 10px;
 }
