--- a/src/js/views/statics/home.html
+++ b/src/js/views/statics/home.html
@@ -3,8 +3,14 @@
 <div class="container-fluid">
   <div class="row">
 
-    <div class="col-md-4 col-md-offset-7">
 
+<div class="quote col-md-7 ">
+<!-- //col-md-offset-7 -->
+      <div ng-controller="HomeCtrl as home">
+        <h1> {{home.todayQuote}} </h1>
+      </div>
+    </div>
+    <div class="col-md-4 ">
       <div class="devbookIntro">
         <h2>DevBook</h2>
         <p>A platform for developers to showcase personal and professional projects to </p>
@@ -64,9 +70,9 @@
 
       </div>
 
-    </div>
+    <!-- </div>
 
-    <div class="col-md-4 col-md-offset-7">
+    <div class="col-md-4 col-md-offset-7"> -->
 
       <div class="loginBox" ng-controller="LoginCtrl as login">
         <p>Already a member?</p>
@@ -76,4 +82,5 @@
     </div>
 
   </div>
+
 </div>
