--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -156,6 +156,10 @@ button {
   text-align: center;
 }
 
+.quoteAuthenticated{
+  padding: 10%;
+}
+
 .devbookIntro, .loginBox {
   margin: 25px;
   border: 1px solid black;
