--- a/src/js/views/auth/login.html
+++ b/src/js/views/auth/login.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 
+<h1 class="pageTitle">Log In</h1>
+
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-
-      <h2>Log in</h2>
+    <div class="col-sm-6 col-sm-offset-3">
 
       <form class="form-horizontal" name="login.loginForm" ng-submit="login.submit()" novalidate>
 
@@ -26,13 +26,14 @@
           </div>
         </div>
 
-        <button class="btn btn-block">Login</button>
+        <button class="btn btn-block success"><i class="fa fa-sign-in fa-lg" aria-hidden="true"></i>Login</button>
 
       </form>
 
       <br>
 
-      <div class="">
+      <div class="oauthLogin">
+
         <button class="btn btn_github btn-block" ng-click="login.authenticate('github')"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i>Login with GitHub</button>
 
         <button class="btn btn_linkedin btn-block" ng-click="login.authenticate('linkedin')"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>Login with LinkedIn</button>
