--- a/src/js/views/projects/edit.html
+++ b/src/js/views/projects/edit.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<h1>Project Edit form</h1>
+<h1 class="pageTitle">Edit Project</h1>
+
 <div class="container">
   <form ng-submit="projectsEdit.update()" name="projectsEdit.editForm" novalidate>
     <div class="col-lg-6">
