--- a/src/js/views/projects/show.html
+++ b/src/js/views/projects/show.html
@@ -1,47 +1,6 @@
 <!DOCTYPE html>
 
-<h1>Individual project form</h1>
-
-<div class="container">
-
-  <h3>{{projectsShow.project.title}}</h3>
-  <img ng-src="{{ projectsShow.project.imageSRC }}" alt="">
-  <p>Description: {{projectsShow.project.description}}</p>
-
-  <ul>
-    <li ng-repeat="tech in projectsShow.project.tech" class="{{ tech.toLowerCase() }}">
-      Tech: {{tech}}
-      <span><i class="icon-{{ tech.toLowerCase() }}"></i></span>
-    </li>
-  </ul>
-
-
-  <a href="" title="like project" ng-click="projectsShow.like()">
-    <i class="fa fa-2x" ng-class="(projectsShow.project.likes.includes(projectsShow.userId)) ? 'fa-heart' : 'fa-heart-o'"></i><br>
-    <span> Likes: {{ projectsShow.project.likes.length }} </span>
-  </a>
-
-
-  <a ui-sref="usersShow({ id:projectsShow.project.createdBy.id })"><p>createdBy:{{ projectsShow.project.createdBy.username }}</p></a>
-  <!-- <a href="mailto:{{ usersShow.user.email }}" ng-if="usersShow.user.email">{{ usersShow.user.email }}</a> -->
-
-  <button ng-if="main.isAuthenticated() && main.currentUserId === projectsShow.project.createdBy.id " ui-sref="projectsEdit({ id: projectsShow.project.id})">Edit</button>
-
-  <button ng-if="main.isAuthenticated() && main.currentUserId === projectsShow.project.createdBy.id" ng-click="projectsShow.open()">Delete</button>
-
-
-  <table class="table">
-    <tbody>
-      <tr>
-        <th ng-repeat="tech in projectsShow.project.tech"><i class="icon-{{ tech.toLowerCase() }}"></i></th>
-        <td>{{tech}}</td>
-      </tr>
-    </tbody>
-  </table>
-
-
-</div>
-
+<h1 class="pageTitle">Project Details</h1>
 
 <div class="container">
 
