--- a/src/js/views/statics/home.html
+++ b/src/js/views/statics/home.html
@@ -53,7 +53,7 @@
                 </div>
               </div>
 
-              <button class="btn btn_home btn-sm btn-block">Register</button>
+              <button class="btn success btn-sm btn-block">Register</button>
 
             </form>
           </div>
@@ -70,7 +70,7 @@
 
       <div class="loginBox" ng-controller="LoginCtrl as login">
         <p>Already a member?</p>
-        <button class="btn btn_home btn-sm btn-block">Login</button>
+        <a ui-sref="login" class="loginBtn btn success btn-sm btn-block">Login</a>
       </div>
 
     </div>
