--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,6 @@
 // // Import all of your scss files here
 //
 // // font-family: 'Raleway', sans-serif;
-// // font-family: 'Quicksand', sans-serif;
 //
 // @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 //
@@ -24,7 +23,6 @@
   }
 }
 
-
 // Variables
 
 $default: #3D2C51;
@@ -32,11 +30,18 @@ $primary: #1792AE;
 $success: #48A15D;
 $info:    #34E6D1;
 $warning: #FCBC00;
-$danger:  #FA5322;
+$danger:  #FF2E00;
 $orange:  #FF8900;
 $green:   #005B46;
 
 // Extends
+
+.rainbow {
+  background-image: linear-gradient(to right, #3D2C51, #FF2E00 20%, #FF8900 40%, #1792AE 60%, #48A15D 80%, #005B46);
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
 
 .centered-styles {
   position: absolute;
@@ -57,6 +62,16 @@ $green:   #005B46;
   }
 }
 
+.success {
+  background-color: $success;
+  color: white;
+  &:hover {
+    color: $warning;
+  }
+}
+
+// Styling
+
 body {
   background-image: url('http://cdn.wallpapersafari.com/49/2/eEQzwl.jpg');
   background-position: center;
@@ -64,27 +79,91 @@ body {
   background-size: cover;
   min-height: 100vh;
   font-family: 'Raleway', sans-serif;
+  font-weight: 200;
 }
 
 .container {
   margin: auto;
 }
 
-// main {
-//   margin: 0;
-// }
+.pageTitle {
+  @extend .rainbow;
+  font-weight: bold;
+  text-decoration: underline;
+  font-size: 45px;
+  text-align: center;
+  padding: 10px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  letter-spacing: 3px;
+}
+
+.fa {
+  margin-right: 10px;
+  margin-left: 10px;
+}
 
 img {
   max-width: 100%;
 }
 
+.input-group-addon {
+  background-color: $primary;
+  i {
+    &.fa-search {
+      color: white;
+      font-size: 18px;
+      &:hover {
+        color: $warning;
+      }
+    }
+  }
+
+}
+
+.oauthLogin {
+  margin-top: 30px;
+}
+
+form.ng-dirty {
+  input {
+    &.ng-valid {
+      border: 1px solid $success;
+    }
+    &.ng-invalid {
+      border: 1px solid $danger;
+    }
+  }
+}
+
+.error div {
+  color: $danger;
+  font-size: 12px;
+}
+
 nav {
+  div {
+    &.navbar-header {
+      a {
+        &.navbar-brand {
+          color: white;
+          font-weight: 600;
+          &:hover {
+            color: $warning;
+          }
+        }
+      }
+    }
+  }
   &.navbar {
     background-color: $primary;
     a {
       &.nav-link {
         color: white;
         font-size: 16px;
+        &:hover {
+          color: $warning;
+        }
       }
     }
   }
@@ -95,6 +174,7 @@ nav {
   background-color: ghostwhite;
   width: 100%;
   float: right;
+  margin-bottom: 50px;
 }
 
 i {
@@ -122,6 +202,7 @@ hr {
   border-width: 2px;
 }
 
+
 button {
   &.btn {
     border-radius: 10px;
@@ -136,17 +217,16 @@ button {
   }
 }
 
+.loginBtn {
+  border-radius: 10px;
+}
+
 .btn_linkedin {
   background-color: #0077B5;
   color: white;
   &:hover {
     color: $warning;
   }
-}
-
-.btn_home {
-  background-color: $success;
-  color: white;
 }
 
 .devbookIntro, .loginBox {
@@ -156,7 +236,6 @@ button {
 }
 
 ul {
-  // width: 100%;
   overflow: hidden;
   list-style: none;
   padding: 0;
@@ -208,17 +287,6 @@ ul {
             }
           }
 
-          // img {
-          //   border-radius: 10px;
-          //   background-position: center;
-          //   background-size: cover;
-          //   filter: brightness(.5);
-          //   transition: all 0.3s;
-          //   &:hover {
-          //     filter: none;
-          //     transform: scale(1.05);
-          //   }
-          // }
       }
     }
   }
@@ -246,4 +314,72 @@ table {
 .eventBox {
   border: 1px solid $default;
   border-radius: 10px;
+}
+
+
+$duration: 30s;
+
+@-webkit-keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+.ticker-wrap {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  height: 4rem;
+  background-color: $primary;
+  padding-left: 100%;
+}
+
+.ticker {
+  display: inline-block;
+  height: 4rem;
+  line-height: 4rem;
+  white-space: nowrap;
+  padding-right: 100%;
+
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+ -webkit-animation-name: ticker;
+         animation-name: ticker;
+  -webkit-animation-duration: $duration;
+          animation-duration: $duration;
+
+  &__item {
+    display: inline-block;
+    padding: 0 2rem;
+    font-size: 2rem;
+    a {
+      color: white;
+      font-weight: 200;
+      &:hover {
+        color: $warning;
+      }
+    }
+  }
 }
