--- a/src/js/views/statics/home.html
+++ b/src/js/views/statics/home.html
@@ -20,15 +20,15 @@
     <div class="col-md-4 ">
       <div class="devbookIntro" ng-if="!main.isAuthenticated()">
         <h2>DevBook</h2>
-        <p>A platform for developers to showcase personal and professional projects to </p>
+        <p>An online community hub for developers in London </p>
 
         <div ng-controller="LoginCtrl as login">
 
           <div class="githubLogin">
-            <button class="btn btn_github btn-sm btn-block" ng-click="login.authenticate('github')"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i>Login with GitHub</button>
+            <button class="btn btn_github btn-sm btn-block" ng-click="login.authenticate('github')"><i class="fa fa-github-square fa-lg" aria-hidden="true"></i>  Login with GitHub</button>
           </div>
           <div class="linkedinLogin">
-            <button class="btn btn_linkedin btn-sm btn-block" ng-click="login.authenticate('linkedin')"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>Login with LinkedIn</button>
+            <button class="btn btn_linkedin btn-sm btn-block" ng-click="login.authenticate('linkedin')"><i class="fa fa-linkedin-square fa-lg" aria-hidden="true"></i>  Login with LinkedIn</button>
           </div>
 
           <hr>
