--- a/src/js/views/statics/events.html
+++ b/src/js/views/statics/events.html
@@ -18,22 +18,26 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 eventBox" ng-repeat="event in events.all">
-      <table class="table table-condensed">
-        <tr class="">
-          <td>{{ event.name }}</td>
-        </tr>
-        <tr>
-          <td>{{ event.address }}</td>
-        </tr>
-        <tr>
-          <td>{{ event.description | limitTo: 500 }}...</td>
 
-        </tr>
+        <div class = "eventName">
+          <h3>{{ event.name }}</h3>
+        </div>
 
-      </table>
+        <div class = "eventAddress">
+          <p>{{ event.address }}</p>
+        </div>
+
+        <div class = "eventDescription">
+          <p>{{ event.description | limitTo: 500 }}...</p>
+        </div>
+
+
       <a class="findMore" href="{{event.url}}" target="_blank">Find Out More</a>
+
     </div>
   </div>
+</div>
+<div class = "separator">
 </div>
 
 <div ng-controller="NewsCtrl as news" class="ticker-wrap">
