--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -169,13 +169,7 @@ nav {
   }
 }
 
-.map {
-  height: 300px;
-  background-color: ghostwhite;
-  width: 100%;
-  float: right;
-  margin-bottom: 50px;
-}
+
 
 i {
   font-size: 60px;
@@ -316,32 +310,44 @@ ul {
   }
 }
 //events page styling
-table {
-  tr {
-    &:nth-child(1) {
-      height: 75px;
-      font-size: 20px;
-      font-weight: bold;
-    }
-    &:nth-child(2) {
-      height: 60px;
-      font-size: 16px;
-    }
-    &:nth-child(3) {
-      height: 170px;
-      font-size: 14px;
-      text-align: justify;
-    }
-  }
+
+.eventName {
+  height: 75px;
+  font-size: 30px;
+  font-weight: bold;
 }
+.eventAddress {
+  height: 60px;
+  font-size: 16px;
+}
+.eventDescription {
+  height: 170px;
+  font-size: 14px;
+  text-align: justify;
+}
+
 .findMore{
   float: right;
 }
 .eventBox {
   border: 1px solid $default;
   border-radius: 10px;
+  width: 48%;
+  margin: 5px;
+  color: $default;
+
+}
+.map {
+  height: 300px;
+  background-color: ghostwhite;
+  width: 100%;
+  float: right;
+  margin-bottom: 50px;
 }
 
+.separator{
+  height: 80px;
+}
 
 $duration: 30s;
 
@@ -424,3 +430,4 @@ $duration: 30s;
 
 .progress-bar-crimson {
   background-color: $danger;
+}
