More styling added

--- a/src/js/views/partials/userDeleteModal.html
+++ b/src/js/views/partials/userDeleteModal.html
@@ -4,11 +4,11 @@
   <h3 class="modal-title">Warning!</h3>
 </div>
 <div class="modal-body">
-  <p>Are you sure you want to delete your profile?</p>
-  <p>This action is irreversible</p>
+  <h4>Are you sure you want to delete your profile?</h4>
+  <h6>This action is irreversible</h6>
   <p>Please don't leave us, we'll miss you too much!!</p>
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" ng-click="usersDelete.closeModal()">Cancel</button>
-  <button class="btn btn-danger" ng-click="usersDelete.delete()">Delete</button>
+  <button class="btn btn-sm success" ng-click="usersDelete.closeModal()">Cancel</button>
+  <button class="btn btn-sm danger" ng-click="usersDelete.delete()">Delete</button>
 </div>
