--- a/src/js/views/partials/projectDeleteModal.html
+++ b/src/js/views/partials/projectDeleteModal.html
@@ -4,10 +4,10 @@
   <h3 class="modal-title">Warning!</h3>
 </div>
 <div class="modal-body">
-  <p>Are you sure you want to delete the <strong>{{ projectsDelete.project.title }}</strong> project?</p>
-  <p>This action is irreversible</p>
+  <h4>Are you sure you want to delete the <strong>{{ projectsDelete.project.title }}</strong> project?</h4>
+  <h6>This action is irreversible!</h6>
 </div>
 <div class="modal-footer">
-  <button ng-click="projectsDelete.closeModal()" class="btn btn-primary">Cancel</button>
-  <button ng-click="projectsDelete.delete()" class="btn btn-danger">Delete</button>
+  <button ng-click="projectsDelete.closeModal()" class="btn btn-sm success">Cancel</button>
+  <button ng-click="projectsDelete.delete()" class="btn btn-sm danger">Delete</button>
 </div>
