--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <h1 class="pageTitle">User Profile</h1>
-
+{{usersShow.user.projects}}
 <div class="container">
   <div class="row">
 
