--- a/src/js/views/projects/new.html
+++ b/src/js/views/projects/new.html
@@ -3,16 +3,15 @@
 <h1 class="pageTitle">New Project</h1>
 
 <div class="container">
+  <form name="projectsNew.newForm" ng-submit="projectsNew.create()" novalidate>
+    <div class="row">
 
-  <div class="row">
-    <form  name="projectsNew.newForm" ng-submit="projectsNew.create()" novalidate>
-
-      <div class="col-md-5">
+      <div class="col-lg-6">
         <div class="form-group row">
           <label for="title" class="col-sm-2 col-form-label">Project Title</label>
           <div class="col-sm-10">
-            <input type="text" class="form-control" id="title" ng-model="projectsNew.project.title" name="title" required>
-            <div ng-messages="projectsNew.newForm.title.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.title.$touched">
+            <input input type="text" class="form-control" id="title" ng-model="projectsNew.project.title" name="title" required>
+            <div class="error" ng-messages="projectsNew.newForm.title.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.title.$touched">
               <div class="notification" ng-message="required">Please add a title</div>
             </div>
           </div>
@@ -21,7 +20,7 @@
           <label for="description" class="col-sm-2 col-form-label">Project Description</label>
           <div class="col-sm-10">
             <textarea class="form-control" id="description" ng-model="projectsNew.project.description" maxlength="500" required></textarea>
-            <div ng-messages="projectsNew.newForm.description.$error" ng-show="projectsNew.newForm.description.$submitted || projectsNew.newForm.description.$touched">
+            <div class="error" ng-messages="projectsEdit.editForm.description.$error" ng-show="projectsEdit.editForm.description.$submitted || projectsEdit.editForm.description.$touched">
               <div class="notification" ng-message="required">Please add a description</div>
             </div>
           </div>
@@ -30,39 +29,50 @@
           <label for="projectUrl" class="col-sm-2 col-form-label">Project Url</label>
           <div class="col-sm-10">
             <input type="text" class="form-control" id="projectUrl" ng-model="projectsNew.project.projectUrl" name="projectUrl" required>
-            <div ng-messages="projectsNew.newForm.projectUrl.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.projectUrl.$touched">
+            <div class="error" ng-messages="projectsNew.newForm.projectUrl.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.projectUrl.$touched">
               <div class="notification" ng-message="required">Please add a Project Url</div>
             </div>
           </div>
         </div>
+        <div class="form-group row">
+          <label for="dateCreated" class="col-sm-2 col-form-label">Date created</label>
+          <div class="col-sm-10">
+            <input type="date" class="form-control" id="dateCreated" ng-model="projectsNew.project.dateCreated" name="dateCreated">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="tech" class="col-sm-2 col-form-label">Tech</label>
+          <div class="col-sm-10">
+            <ui-select multiple tagging tagging-label="false" ng-model="projectsNew.project.tech" theme="bootstrap" ng-disabled="main.disabled" style="width: 300px;" title="Choose a color">
+              <ui-select-match placeholder="Select techs...">{{ $item }}</ui-select-match>
+              <ui-select-choices repeat="tech in main.availableTechs | filter:$select.search">
+                {{tech}}
+              </ui-select-choices>
+            </ui-select>
+          </div>
+        </div>
       </div>
 
-      <div class="col-md-5">
-        <div class="form-group">
-          <label for="tech" class="col-sm-2 col-form-label">Technology Used</label>
-          <ui-select multiple tagging tagging-label="false" ng-model="projectsNew.project.tech" theme="bootstrap" ng-disabled="main.disabled" style="width: 300px;" title="Choose a color">
-            <ui-select-match placeholder="Select techs...">{{ $item }}</ui-select-match>
-            <ui-select-choices repeat="tech in main.availableTechs | filter:$select.search">
-              {{tech}}
-            </ui-select-choices>
-          </ui-select>
-        </div>
-
+      <div class="col-lg-6">
         <div class="form-group row">
           <label for="image" class="col-sm-2 col-form-label">Image Url</label>
           <div class="col-sm-10">
             <input base64 type="file" class="form-control" id="image" ng-model="projectsNew.project.base64" name="base64">
-            <img ng-src="{{projectsNew.project.base64}}" alt="">
-            <div ng-messages="projectsNew.newForm.image.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.image.$touched">
+            <img class="previewImage" ng-src="{{projectsNew.project.base64}}" alt="">
+            <div class="error" ng-messages="projectsNew.editForm.image.$error" ng-show="projectsNew.newForm.$submitted ||projectsNew.newForm.image.$touched">
               <div class="notification" ng-message="required">Please add image url</div>
             </div>
           </div>
         </div>
-
       </div>
 
-      <button class="btn btn-block">Add Project</button>
+    </div>
 
-    </form>
-  </div>
+    <div class="row button-div">
+      <input type="submit" class="btn success" value="Submit Changes">
+    </div>
+
+  </form>
+
+
 </div>
