--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -5,7 +5,9 @@
 
 <div class="container">
   <form ng-submit="usersEdit.update()" name="usersEdit.editForm" novalidate >
-    <div class="col-lg-6">
+    <div class="row">
+      <div class="col-lg-6">
+
 
       <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Username</label>
@@ -41,34 +43,38 @@
           <input type="text" class="form-control" id="portfolioUrl" ng-model="usersEdit.user.portfolioUrl" name="portfolioUrl">
         </div>
       </div>
+      <div class="form-group row">
+        <label for="tech" class="col-sm-2 col-form-label">Tech</label>
+        <div class="col-sm-10">
+          <ui-select multiple tagging tagging-label="false" ng-model="usersEdit.user.tech" theme="bootstrap" ng-disabled="main.disabled" style="width: 300px;" title="Choose a color">
+            <ui-select-match placeholder="Select techs...">{{ $item }}</ui-select-match>
+            <ui-select-choices repeat="tech in main.availableTechs | filter:$select.search">
+              {{tech}}
+            </ui-select-choices>
+          </ui-select>
+
+        </div>
+      </div>
     </div>
 
     <div class="col-lg-6">
+      <div class="avatarBox">
+        <h4>Choose your profile avatar</h4>
+        <img class="avatar" ng-repeat="avatar in usersEdit.avatars" ng-src="{{ avatar }}" ng-click="usersEdit.selectAvatar(avatar)">
+      </div>
 
-      <img ng-repeat="avatar in usersEdit.avatars" ng-src="{{ avatar }}" ng-click="usersEdit.selectAvatar(avatar)">
 
-      <h3>Selected Image <img ng-src="{{usersEdit.user.avatar}}"></h3>
+      <h3>Selected Image <img class="avatar" ng-src="{{usersEdit.user.avatar}}"></h3>
 
 
     </div>
-    <div class="form-group row">
-      <label for="tech" class="col-sm-2 col-form-label">Tech</label>
-      <div class="col-sm-10">
-        <ui-select multiple tagging tagging-label="false" ng-model="usersEdit.user.tech" theme="bootstrap" ng-disabled="main.disabled" style="width: 300px;" title="Choose a color">
-          <ui-select-match placeholder="Select techs...">{{ $item }}</ui-select-match>
-          <ui-select-choices repeat="tech in main.availableTechs | filter:$select.search">
-            {{tech}}
-          </ui-select-choices>
-        </ui-select>
-        <p>Selected: {{usersEdit.tech}}</p>
-      </div>
-    </div>
+  </div>
 
 
-    <div class="form-group row">
-      <div class="offset-sm-2 col-sm-10">
-        <input type="submit" class="btn" value="Submit Changes">
-      </div>
+    <div class="row button-div">
+
+        <input type="submit" class="btn success" value="Submit Changes">
+
     </div>
 
   </form>
